--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "databricks-cli>=0.18.0",
     "databricks-connect>=15.0,<16.0",
     "ipykernel>=6.30.1",
+    "nbformat>=5.10.4",
     "python-dotenv>=1.1.1",
 ]
 
