--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "ipykernel>=6.30.1",
     "nbformat>=5.10.4",
     "python-dotenv>=1.1.1",
+    "sentry-sdk>=2.42.0",
 ]
 
 [dependency-groups]
